<resources>
    <string name="app_name">F.List</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="action_settings">设置</string>
    <string name="snack_bar_text_item_removed">条目已经删除</string>
    <string name="snack_bar_action_undo">撤销</string>
    <string name="dialog_message_item_pinned">你确定要将这个条目固定到手机的通知栏吗？</string>
    <string name="dialog_message_item_unpinned">你确定要将这个条目从手机的通知栏删除吗？</string>
    <string name="drawer_menu_todo">待办</string>
    <string name="drawer_menu_note">备忘</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_more">更多</string>
    <string name="drawer_menu_share">分享</string>
    <string name="drawer_menu_send">发送</string>
    <string name="nav_title">F.List</string>
    <string name="nav_title2">first list app</string>
    <string name="todo_done">已完成</string>
    <string name="todo_un_done">正在进行</string>
    <string name="drawer_menu_donate">捐赠</string>
    <string name="add_todo">添加待办</string>
    <string name="priority_0">不急</string>
    <string name="priority_1">一般</string>
    <string name="priority_2">紧急</string>
    <string name="todo_hint">你准备做什么</string>
    <string name="del_qr">删除条目</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="del_qr_content">你确定要删除吗？删除后的数据不能恢复！</string>
    <string name="dialog_message_item_pinned_title">固定到通知栏</string>
    <string name="close">关闭</string>
    <string name="save_goon">保存并继续添加</string>
    <string name="save">保存</string>
    <string name="save_close">保存并关闭</string>
    <string name="err_null">不能为空</string>
    <string name="del_all_title">清除所有</string>
    <string name="del_all_content">你确定要清除所有已完成的任务吗？删除后的数据不能恢复！</string>
    <string name="progress_title">操作进行中</string>
    <string name="please_wait">请等待…</string>
    <string name="add_note">添加备忘</string>
    <string name="note_title_hint">请输入标题</string>
    <string name="note_content_hint">请输入内容</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="exit_qr">再按一次退出程序</string>
    <string name="dialog_message_item_unpinned_title">取消固定</string>
    <string name="sett_save_category_title">保存状态</string>
    <string name="sett_save_category_desc">退出时保存最后浏览的位置</string>
    <string name="sett_defaultCate_title">启动时默认进入</string>
    <string name="sett_category_manage_todo">待办分类管理</string>
    <string name="sett_no_save_category_desc">退出时不保存最后浏览的位置</string>
    <string name="default_nav">默认进入</string>
    <string name="sett_category_manage_note">备忘分类管理</string>
    <string name="sett_about_title">关于</string>
    <string name="sett_about_ver">版本：V</string>
    <string name="sett_about_author">作者：ccxiong（95353088@qq.com）</string>
    <string name="edit">修改</string>
    <string name="edit_success">修改成功</string>
    <string name="add">添加</string>
    <string name="err_length">长度超限</string>
    <string name="del_ca_content">删除分类将会同时删除分类下面所有待办或备忘，请谨慎操作！</string>
    <string name="del_success">删除成功</string>
    <string name="cate_content_hint">请输入分类名</string>
    <string name="sett_help">使用说明</string>
    <string name="message_item_pinned">成功固定到通知栏</string>
    <string name="message_item_unpinned">成功从通知栏取消</string>
    <string name="unpinned">取消通知</string>
    <string name="sett_help_1">向右滑正在进行的任务加入到已完成。</string>
    <string name="sett_help_2">向左滑动已完成的任务加入到正在进行。</string>
    <string name="sett_help_3">长按可以删除任务。</string>
    <string name="sett_help_4">在正在进行页面左滑进入已完成页面。</string>
    <string name="sett_help_5">在已完成页面右滑进入正在进行页面。</string>
    <string name="sett_help_6">向右滑动删除备忘。</string>
    <string name="sett_help_7">向左滑动切换手机通知栏是否显示通知。</string>
    <string name="sett_help_8">按住条目左边图标拖动排序。</string>
    <string name="sett_help_9">触摸条目显示备忘详情。</string>
    <string name="sett_help_10">长按条目进入编辑。</string>
    <string name="donate">如果你觉得这个软件对你有用，你可以支持开发者，让这个软件更好的生存下去。\n\n支付宝账户： ccqiuqiu@vip.qq.com</string>
    <string name="copy">复制账号</string>
    <string name="copyed">已经复制</string>
    <string name="drawer_menu_tuijian">推荐</string>
    <string name="share">这个软件很不错，推荐给你用。下载地址：http://www.wandoujia.com/apps/com.ccqiuqiu.flist</string>
    <string name="send_to">选择分享方式</string>
    <string name="sett_color_primary_title">主题</string>
    <string name="sett_color_primary_desc">选择主题颜色</string>
    <string name="sett_color_accent_title">强调色</string>
    <string name="sett_color_accent_desc">选择强调色（如浮动按钮颜色）</string>
    <string name="back">返回</string>
    <string name="custom">自定义</string>
    <string name="done">确定</string>
    <string name="presets">预设</string>
    <string name="add_success">添加成功</string>
    <string name="edit_todo">修改任务</string>
    <string name="drawer_menu_passnote">密码本</string>
    <string name="edit_note">修改备忘</string>
    <string name="copy_title">复制标题</string>
    <string name="copy_content">复制内容</string>
    <string name="action_search">搜索</string>
    <string name="add_passnote">添加账户</string>
    <string name="username">用户名</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="url">网址</string>
    <string name="url_hint">请输入网址</string>
    <string name="desc">备注</string>
    <string name="desc_hint">请输入备注</string>
    <string name="edit_passnote">修改账户</string>
    <string name="unlock">请绘制图案解锁</string>
    <string name="err_pass">绘制错误！</string>
    <string name="set_pass_f">首次使用</string>
    <string name="set_pass">为保证你的数据安全，请设置解锁图案。</string>
    <string name="err_pass_length">请至少连接4个点</string>
    <string name="set_pass_0">很好，请再次连接相同的点。</string>
    <string name="set_pass_no_eq">2次绘制的图案不一致！请重新开始。</string>
    <string name="set_pass_success">设置成功！请开始使用。</string>
    <string name="change_pass">修改解锁图案</string>
    <string name="change_pass_1">请绘制原图案</string>
    <string name="change_pass_2">请绘制新图案</string>
    <string name="sett_pass_title">密码本保护</string>
    <string name="last_location">上次退出的位置</string>
    <string name="sett_pass_lock">何时锁定密码本</string>
    <string name="sett_pass_content_0">进入后台或关闭屏幕时锁定</string>
    <string name="sett_pass_content_1">退出软件时锁定</string>
    <string name="sett_pass_content_2">永远不要锁定</string>
    <string name="change_pass_success">修改成功，请使用新的图案密码</string>
    <string name="welcome">正在初始化加密...</string>
    <string name="search">输入关键字</string>
    <string name="sett_about">关于</string>
</resources>
