<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/drawer_menu_todo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/item_priority_0"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sett_help_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_2"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_3"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_4"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/drawer_menu_note"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/item_priority_0"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_6"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_7"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_8"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_9"/>
            <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sett_help_10"/>

</LinearLayout>
