<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"
        android:maxLength="30"
        android:singleLine="true"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/title"
        app:met_hideUnderline="true"
        app:met_maxCharacters="30" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:maxLength="30"
        android:singleLine="true"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/username"
        app:met_hideUnderline="true"
        app:met_maxCharacters="30" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:maxLength="30"
        android:singleLine="true"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/password"
        app:met_hideUnderline="true"
        app:met_maxCharacters="30" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_hint"
        android:maxLength="300"
        android:singleLine="true"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/desc"
        app:met_hideUnderline="true"
        app:met_maxCharacters="300" />

</LinearLayout>
