<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_maxCharacters="60"
        android:maxLength="60"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/title"
        app:met_hideUnderline="true"
        android:hint="@string/note_title_hint"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/met_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_maxCharacters="2000"
        app:met_clearButton="true"
        app:met_hideUnderline="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/content"
        android:hint="@string/note_content_hint"/>

</LinearLayout>
