<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <!--1-->
        <RelativeLayout
            android:id="@+id/sett_default_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            >
            <TextView
                android:id="@+id/sett_default_run_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/g_color"
                android:textSize="16sp"
                android:text="@string/sett_defaultCate_title"/>
            <TextView
                android:id="@+id/sett_default_run_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_default_run_title"
                android:textColor="@color/shadow_color"
                android:text="@string/drawer_menu_note"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />
        <RelativeLayout
            android:id="@+id/sett_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            >
            <TextView
                android:id="@+id/sett_pass_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/g_color"
                android:textSize="16sp"
                android:text="@string/sett_pass_title"/>
            <TextView
                android:id="@+id/sett_pass_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_pass_title"
                android:textColor="@color/shadow_color"
                android:text="@string/sett_pass_content_1"/>
        </RelativeLayout>
        <!--2-->
        <!--<RelativeLayout-->
            <!--android:id="@+id/sett_save_category"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="15dp"-->
            <!--android:paddingBottom="15dp"-->
            <!--android:paddingLeft="6dp"-->
            <!--android:paddingRight="6dp"-->
            <!--android:background="@drawable/settings_bg_selector"-->
            <!-->-->
            <!--<TextView-->
                <!--android:id="@+id/sett_save_category_title"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:textColor="@color/g_color"-->
                <!--android:textSize="16sp"-->
                <!--android:text="@string/sett_save_category_title"/>-->
            <!--<TextView-->
                <!--android:id="@+id/sett_save_category_desc"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@id/sett_save_category_title"-->
                <!--android:textColor="@color/shadow_color"-->
                <!--android:text="@string/sett_save_category_desc"/>-->
            <!--&lt;!&ndash;style="@style/SwitchbuttonMD"&ndash;&gt;-->
            <!--<com.kyleduo.switchbutton.SwitchButton-->
                <!--android:id="@+id/sett_save_category_md"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:checked="false"-->
                <!--/>-->
        <!--</RelativeLayout>-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />
<!--主题-->
        <RelativeLayout
            android:id="@+id/sett_color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            >
            <TextView
                android:id="@+id/sett_color_primary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/g_color"
                android:textSize="16sp"
                android:text="@string/sett_color_primary_title"/>
            <TextView
                android:id="@+id/sett_color_primary_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_color_primary_title"
                android:textColor="@color/shadow_color"
                android:text="@string/sett_color_primary_desc"/>
            <ImageView
                android:id="@+id/sett_color_primary_flg"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/color_flg"
                android:src="@drawable/shape_point_red"
                android:layout_height="@dimen/color_flg" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />

        <!--强调色-->
        <RelativeLayout
            android:id="@+id/sett_color_accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            >
            <TextView
                android:id="@+id/sett_color_accent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/g_color"
                android:textSize="16sp"
                android:text="@string/sett_color_accent_title"/>
            <TextView
                android:id="@+id/sett_color_accent_desc"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_color_accent_title"
                android:textColor="@color/shadow_color"
                android:text="@string/sett_color_accent_desc"/>
            <ImageView
                android:id="@+id/sett_color_accent_flg"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/color_flg"
                android:src="@drawable/shape_point_red"
                android:layout_height="@dimen/color_flg" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />

        <!--3-->
        <TextView
            android:id="@+id/sett_category_manage_todo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:textColor="@color/g_color"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/sett_category_manage_todo"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />
        <!--4-->
        <TextView
            android:id="@+id/sett_category_manage_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/g_color"
            android:background="@drawable/settings_bg_selector"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:text="@string/sett_category_manage_note"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />
        <!--5-->
        <TextView
            android:id="@+id/sett_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/g_color"
            android:background="@drawable/settings_bg_selector"
            android:textSize="16sp"
            android:text="@string/sett_help"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_priority_0"
            />
        <!--6-->
        <RelativeLayout
            android:id="@+id/sett_about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/settings_bg_selector"
            >
            <TextView
                android:id="@+id/sett_about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/g_color"
                android:textSize="16sp"
                android:text="@string/sett_about_title"/>
            <TextView
                android:id="@+id/sett_about_ver"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_about_title"
                android:textColor="@color/shadow_color"
                android:text="@string/sett_about_ver"/>
            <TextView
                android:id="@+id/sett_about_author"
                android:layout_width="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sett_about_ver"
                android:textColor="@color/shadow_color"
                android:text="@string/sett_about_author"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>